multiSelectMenu shift fix

--- a/app/styles/multiSelectMenu.scss
+++ b/app/styles/multiSelectMenu.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: inline-block;
     overflow: hidden;
-    min-width: 175px;
+    min-width: 200px;
     *:focus {
         outline: 0;
     }
